--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Man-woman relationships -- Fiction'
 - !lcsh 'Sea stories'
+- GITenberg
 title: 'A Tale of Two Tunnels: A Romance of the Western Waters'
 url: http://www.gutenberg.org/ebooks/44590
